<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Order">

    <ImageView
        android:id="@+id/Oderbackbtn"
        android:layout_width="90dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/Promo_code"
        android:layout_width="159dp"
        android:layout_height="40dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:hint="@string/Promo_code"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="#707070"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvNewPrice"
        android:layout_width="137dp"
        android:layout_height="41dp"
        android:layout_marginTop="636dp"
        android:layout_marginEnd="46dp"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome4"
        android:layout_width="137dp"
        android:layout_height="41dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:text="Total:"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="137dp"
        android:layout_height="41dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="54dp"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome2"
        android:layout_width="137dp"
        android:layout_height="41dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="31dp"
        android:text="@string/Order_total"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/tvPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/procced"
        style="@android:style/Widget.Button"
        android:layout_width="249dp"
        android:layout_height="57dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="82dp"
        android:text="@string/procced"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.991"
        app:layout_constraintStart_toEndOf="@+id/welcome4"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/apply"
        style="@android:style/Widget.Button"
        android:layout_width="125dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/apply"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Promo_code"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="145dp"
        android:layout_height="51dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="102dp"
        android:text="@string/oder"
        android:textAlignment="textStart"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Oderbackbtn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="284dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="103dp"
        android:text="@string/Order_details"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="204dp"
        android:layout_height="118dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="129dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:srcCompat="@drawable/download__2_"
        tools:ignore="MissingConstraints" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="237dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:rating="3.5"
        android:scrollbarSize="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="76dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="52dp"
        android:text="3.5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ratingBar"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="274dp"
        android:layout_height="53dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="82dp"
        android:checked="false"
        android:text="@string/oder_req01"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome2"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="213dp"
        android:layout_height="44dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="145dp"
        android:checked="false"
        android:text="@string/oder_rq02"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="147dp"
        android:layout_height="53dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="10dp"
        android:text="@string/oder_discount"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>